objects/ASI_CRM_Region__c.object
<CustomObject>
    <description>ASI_CRM_Region</description>
    <fields>
        <fullName>ASI_CRM_Billing_Group__c</fullName>
        <label>Billing Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region_Type__c</fullName>
        <label>Region Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Create_Heavy_Contract_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Heavy Contract On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Payable_Vol_Amt_BRSF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Payable Vol/Amt (BRSF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Payable_Vol_Amt_PSF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Payable Vol/Amt (PSF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Payable_Vol_Amt_VEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Payable Vol/Amt (VEC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Greater Region</label>
        <referenceTo>ASI_CRM_Greater_Region__c</referenceTo>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Company_Code__c</fullName>
        <description>JDE Company Code</description>
        <label>Prestige JDE Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Premium_JDE_Company_Code__c</fullName>
        <label>Premium JDE Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RFM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Region</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions_RFM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RVP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Region</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_CN_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region_Code__c</fullName>
        <label>Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Regional_Accountant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Accountant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Region</value>
            </filterItems>
            <filterItems>
                <field>$User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>ASI_CRM_CN_Region</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Region_Code__c</columns>
        <columns>ASI_CRM_Greater_Region__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CRM_RVP__c</columns>
        <columns>ASI_CRM_JDE_Company_Code__c</columns>
        <columns>ASI_CRM_Premium_JDE_Company_Code__c</columns>
        <columns>ASI_CRM_Billing_Group__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Region__c.ASI_CRM_CN_Region</value>
        </filters>
        <label>CN Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_RVP__c</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_Region_Code__c</columns>
        <columns>ASI_CRM_Greater_Region__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Billing_Group__c</columns>
        <columns>ASI_CRM_JDE_Company_Code__c</columns>
        <columns>ASI_CRM_Premium_JDE_Company_Code__c</columns>
        <columns>ASI_CRM_CN_Region_Type__c</columns>
        <columns>ASI_CRM_Regional_Accountant__c</columns>
        <columns>ASI_CRM_RFM__c</columns>
        <columns>ASI_CRM_WS_Manager__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Region__c.ASI_CRM_CN_Region</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Region</fullName>
        <active>true</active>
        <label>CN Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>